// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar SVG Headshot Circle Layout - createHeadshotCircleAvatarSVG() renders avatar in styled container 1`] = `
<svg
  viewBox="0 63.5 380 480.5"
  xmlns="http://www.w3.org/2000/svg"
>
  <defs>
    <clippath
      id="avatar-upper"
    >
      <rect
        height="353.5"
        width="100%"
        x="0"
        y="0"
      />
      <circle
        cx="50%"
        cy="353.5"
        r="146"
      />
    </clippath>
  </defs>
  <circle
    cx="50%"
    cy="353.5"
    fill="#eff1f2"
    r="153.5"
  />
  <svg
    clip-path="url(#avatar-upper)"
    height="600"
    viewBox="0 0 380 600"
    width="380"
    xmlns="http://www.w3.org/2000/svg"
  >
    <style>
      /* accessory-a */
.accessory-a-baz{stroke:orange;}.accessory-a-boz{stroke:blue;}
/* accessory-b */
.accessory-b-foo{stroke:red;}.accessory-b-boz{stroke:blue;}
/* customisation styles */
.color-xxx{fill:red}.color-yyy{fill:#aabbcc}.color-zzz{fill:#111111}
    </style>
    <g
      id="avatar"
    >
      <g
        id="accessory-a"
      >
        <rect
          class="accessory-a-baz accessory-a-boz"
          height="16"
          width="15"
        />
        <defs />
        <g>
          <circle
            class="foo accessory-a-baz accessory-a-boz color-yyy"
            cx="15"
            cy="16"
            r="11"
          />
        </g>
        <circle
          class="accessory-a-baz"
          cx="12"
          cy="13"
          r="14"
        />
      </g>
      <g
        id="accessory-b"
      >
        <rect
          class="accessory-b-foo bar baz color-xxx"
          height="6"
          width="5"
        />
        <defs />
        <g>
          <circle
            class="bar color-yyy"
            cx="5"
            cy="6"
            r="1"
          />
        </g>
        <circle
          class="accessory-b-foo"
          cx="2"
          cy="3"
          r="4"
        />
      </g>
    </g>
  </svg>
</svg>
`;

exports[`Avatar SVG NFT Card Layout - createNFTCardAvatarSVG() renders free NFT avatar in styled container (seriesSize null) 1`] = `
<svg
  viewBox="0 0 552 736"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <style>
    @font-face {
  font-family: 'Reddit Sans';
  font-weight: bold;
  font-style: normal;
  src: url('https://www.redditstatic.com/crypto-assets/v2/-core-styles-fonts-redditsans-redditsans-bold-c4a5ab79eb.woff2') format('woff2');
}
@font-face {
  font-family: 'Reddit Sans';
  font-weight: 800;
  font-style: normal;
  src: url('https://www.redditstatic.com/crypto-assets/v2/-core-styles-fonts-redditsans-redditsans-extrabold-5d96a4e524.woff2') format('woff2');
}/* accessory-a */
.accessory-a-baz{stroke:orange;}.accessory-a-boz{stroke:blue;}
/* accessory-b */
.accessory-b-foo{stroke:red;}.accessory-b-boz{stroke:blue;}
/* customisation styles */
.color-xxx{fill:red}.color-yyy{fill:#aabbcc}.color-zzz{fill:#111111}
  </style>
  <image
    height="736"
    id="nft-card-bg"
    preserveAspectRatio="none"
    width="552"
    xlink:href="data:image/png;base64,cG5nCg"
  />
  <svg
    height="600"
    viewBox="0 0 380 600"
    xmlns="http://www.w3.org/2000/svg"
    y="63"
  >
    <g
      id="avatar"
    >
      <g
        id="accessory-a"
      >
        <rect
          class="accessory-a-baz accessory-a-boz"
          height="16"
          width="15"
        />
        <defs />
        <g>
          <circle
            class="foo accessory-a-baz accessory-a-boz color-yyy"
            cx="15"
            cy="16"
            r="11"
          />
        </g>
        <circle
          class="accessory-a-baz"
          cx="12"
          cy="13"
          r="14"
        />
      </g>
      <g
        id="accessory-b"
      >
        <rect
          class="accessory-b-foo bar baz color-xxx"
          height="6"
          width="5"
        />
        <defs />
        <g>
          <circle
            class="bar color-yyy"
            cx="5"
            cy="6"
            r="1"
          />
        </g>
        <circle
          class="accessory-b-foo"
          cx="2"
          cy="3"
          r="4"
        />
      </g>
    </g>
  </svg>
  <svg
    preserveAspectRatio="xMinYMax"
    viewBox="0 0 552 58"
    xmlns="http://www.w3.org/2000/svg"
    y="-32.5"
  >
    <defs>
      <filter
        id="shadow"
        width="200%"
        x="-50%"
      >
        <fegaussianblur
          in="SourceAlpha"
          stdDeviation="3"
        />
        <feoffset
          dx="0"
          dy="0"
          result="offsetblur"
        />
        <feflood
          flood-color="#000"
          flood-opacity="1"
        />
        <fecomposite
          in2="offsetblur"
          operator="in"
        />
        <femerge>
          <femergenode />
          <femergenode
            in="SourceGraphic"
          />
        </femerge>
      </filter>
      <lineargradient
        id="gradient"
      >
        <stop
          offset="97%"
          stop-color="white"
        />
        <stop
          offset="99%"
          stop-color="black"
        />
      </lineargradient>
      <mask
        id="mask"
      >
        <rect
          fill="url(#gradient)"
          height="100%"
          width="100%"
        />
      </mask>
    </defs>
    <text
      filter="url(#shadow)"
      font-size="29.1"
      id="nft-name"
      mask="url(#mask)"
      style="font-family:'Reddit Sans';font-weight:bold;fill:#f1f3f5;stroke:black;stroke-opacity:0.4;stroke-width:2;paint-order:stroke fill;"
      text-anchor="left"
      x="32.5"
      y="68%"
    >
      Example Avatar #123
    </text>
  </svg>
  <svg
    height="52"
    preserveAspectRatio="xMaxYMin"
    viewBox="0 0 32 32"
    x="-25.5"
    xmlns="http://www.w3.org/2000/svg"
    y="26"
  >
    <path
      d="M16.0822 8.96002H3.28223V23.04H16.0822V8.96002Z"
      fill="#5EF6D8"
    />
    <path
      d="M14.8025 1.28003V2.56003H13.5225V3.84003H10.9625V5.12003H9.6825V6.40003H7.1225V7.68003H4.5625V8.96003H5.8425V10.24H7.1225V10.7292V11.52H8.2905H8.4025H9.6825V12.8H10.9625V14.08H13.5225V15.36H14.8025H16.0825V1.28003H14.8025Z"
      fill="#D7F7FF"
    />
    <path
      d="M14.8025 16.64H13.5225V17.92H10.9625V19.2H9.6825V20.48H8.4025H8.2905H7.1225V21.2709V21.76H5.8425V23.04H4.5625V24.32H7.1225V25.6H9.6825V26.88H10.9625V28.16H13.5225V29.44H14.8025V30.72H16.0825V16.64H14.8025Z"
      fill="#1EA1C4"
    />
    <path
      d="M16.0818 23.04H28.8818V8.95998L16.0818 8.95998V23.04Z"
      fill="#1EA1C4"
    />
    <path
      d="M26.322 23.04V21.76H25.042V21.2709V20.48H23.874H23.762H22.482V19.2H21.202V17.92H18.642V16.64H17.362H16.082V30.72H17.362V29.44H18.642V28.16H21.202V26.88H22.482V25.6H25.042V24.32H27.602V23.04H26.322Z"
      fill="#0569A6"
    />
    <path
      d="M25.042 7.68003V6.40003H22.482V5.12003H21.202V3.84003H18.642V2.56003H17.362V1.28003H16.082V15.36H17.362H18.642V14.08H21.202V12.8H22.482V11.52H23.762H23.874H25.042V10.7292V10.24H26.322V8.96003H27.602V7.68003H25.042Z"
      fill="#5EF6D8"
    />
    <path
      d="M28.8206 7.68V6.4H26.3223V5.12H23.7623V3.84H22.4823V2.56H19.9223V1.28H18.6423V0H13.5223V1.28H12.2423V2.56H9.68229V3.84H8.4V5.12H5.84V6.4H3.34171V7.68H2V8.96V24.32H3.28V25.6H5.84V26.88H8.4V28.16H9.68V29.44H12.24V30.72H13.52V32H18.64V30.72H19.92V29.44H22.48V28.16H23.76V26.88H26.32V25.6H28.88V24.32H30.16V8.96V7.68H28.8206ZM28.8823 23.04H27.6V24.32H25.04V25.6H22.48V26.88H21.2V28.16H18.64V29.44H17.36V30.72H14.8V29.44H13.52V28.16H10.96V26.88H9.68V25.6H7.12V24.32H4.56V23.04H3.28V8.96H4.56V7.68H7.12V6.4H9.68V5.12H10.96V3.84H13.52V2.56H14.8V1.28H17.36V2.56H18.64V3.84H21.2V5.12H22.48V6.4H25.04V7.68H27.6V8.96H28.88L28.8823 23.04Z"
      fill="#2450A4"
    />
  </svg>
</svg>
`;

exports[`Avatar SVG NFT Card Layout - createNFTCardAvatarSVG() renders regular NFT avatar in styled container (seriesSize 1000) 1`] = `
<svg
  viewBox="0 0 552 736"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <style>
    @font-face {
  font-family: 'Reddit Sans';
  font-weight: bold;
  font-style: normal;
  src: url('https://www.redditstatic.com/crypto-assets/v2/-core-styles-fonts-redditsans-redditsans-bold-c4a5ab79eb.woff2') format('woff2');
}
@font-face {
  font-family: 'Reddit Sans';
  font-weight: 800;
  font-style: normal;
  src: url('https://www.redditstatic.com/crypto-assets/v2/-core-styles-fonts-redditsans-redditsans-extrabold-5d96a4e524.woff2') format('woff2');
}/* accessory-a */
.accessory-a-baz{stroke:orange;}.accessory-a-boz{stroke:blue;}
/* accessory-b */
.accessory-b-foo{stroke:red;}.accessory-b-boz{stroke:blue;}
/* customisation styles */
.color-xxx{fill:red}.color-yyy{fill:#aabbcc}.color-zzz{fill:#111111}
  </style>
  <image
    height="736"
    id="nft-card-bg"
    preserveAspectRatio="none"
    width="552"
    xlink:href="data:image/png;base64,cG5nCg"
  />
  <svg
    height="600"
    viewBox="0 0 380 600"
    xmlns="http://www.w3.org/2000/svg"
    y="63"
  >
    <g
      id="avatar"
    >
      <g
        id="accessory-a"
      >
        <rect
          class="accessory-a-baz accessory-a-boz"
          height="16"
          width="15"
        />
        <defs />
        <g>
          <circle
            class="foo accessory-a-baz accessory-a-boz color-yyy"
            cx="15"
            cy="16"
            r="11"
          />
        </g>
        <circle
          class="accessory-a-baz"
          cx="12"
          cy="13"
          r="14"
        />
      </g>
      <g
        id="accessory-b"
      >
        <rect
          class="accessory-b-foo bar baz color-xxx"
          height="6"
          width="5"
        />
        <defs />
        <g>
          <circle
            class="bar color-yyy"
            cx="5"
            cy="6"
            r="1"
          />
        </g>
        <circle
          class="accessory-b-foo"
          cx="2"
          cy="3"
          r="4"
        />
      </g>
    </g>
  </svg>
  <svg
    preserveAspectRatio="xMinYMax"
    viewBox="0 0 552 58"
    xmlns="http://www.w3.org/2000/svg"
    y="-32.5"
  >
    <defs>
      <filter
        id="shadow"
        width="200%"
        x="-50%"
      >
        <fegaussianblur
          in="SourceAlpha"
          stdDeviation="3"
        />
        <feoffset
          dx="0"
          dy="0"
          result="offsetblur"
        />
        <feflood
          flood-color="#000"
          flood-opacity="1"
        />
        <fecomposite
          in2="offsetblur"
          operator="in"
        />
        <femerge>
          <femergenode />
          <femergenode
            in="SourceGraphic"
          />
        </femerge>
      </filter>
      <lineargradient
        id="gradient"
      >
        <stop
          offset="97%"
          stop-color="white"
        />
        <stop
          offset="99%"
          stop-color="black"
        />
      </lineargradient>
      <mask
        id="mask"
      >
        <rect
          fill="url(#gradient)"
          height="100%"
          width="100%"
        />
      </mask>
    </defs>
    <svg
      id="nft-count"
      preserveAspectRatio="xMinYMin"
      viewBox="0 0 64 96"
      x="32"
    >
      <g
        opacity="0.5"
      >
        <rect
          fill="none"
          height="91"
          rx="11"
          ry="11"
          stroke="#000"
          stroke-width="5.5"
          width="59"
          x="2.5"
          y="2.5"
        />
        <rect
          fill="#000"
          height="45.5"
          rx="11"
          ry="11"
          width="59"
          x="2.5"
          y="50%"
        />
        <rect
          fill="#000"
          height="11"
          width="59"
          x="2.5"
          y="50%"
        />
      </g>
      <text
        filter="url(#shadow)"
        font-size="27"
        style="font-family:'Reddit Sans';font-weight:800;fill:#f1f3f5;stroke:black;stroke-opacity:0.4;stroke-width:2;paint-order:stroke fill;"
        text-anchor="middle"
        x="50%"
        y="38%"
      >
        1
      </text>
      <text
        font-size="27"
        id="series-size"
        style="font-family:'Reddit Sans';font-weight:800;fill:#f1f3f5;"
        text-anchor="middle"
        x="50%"
        y="85%"
      >
        1k
      </text>
    </svg>
    <text
      filter="url(#shadow)"
      font-size="29.1"
      id="nft-name"
      mask="url(#mask)"
      style="font-family:'Reddit Sans';font-weight:bold;fill:#f1f3f5;stroke:black;stroke-opacity:0.4;stroke-width:2;paint-order:stroke fill;"
      text-anchor="left"
      x="87"
      y="68%"
    >
      Example Avatar #123
    </text>
  </svg>
  <svg
    height="52"
    preserveAspectRatio="xMaxYMin"
    viewBox="0 0 32 32"
    x="-25.5"
    xmlns="http://www.w3.org/2000/svg"
    y="26"
  >
    <path
      d="M16.0822 8.96002H3.28223V23.04H16.0822V8.96002Z"
      fill="#5EF6D8"
    />
    <path
      d="M14.8025 1.28003V2.56003H13.5225V3.84003H10.9625V5.12003H9.6825V6.40003H7.1225V7.68003H4.5625V8.96003H5.8425V10.24H7.1225V10.7292V11.52H8.2905H8.4025H9.6825V12.8H10.9625V14.08H13.5225V15.36H14.8025H16.0825V1.28003H14.8025Z"
      fill="#D7F7FF"
    />
    <path
      d="M14.8025 16.64H13.5225V17.92H10.9625V19.2H9.6825V20.48H8.4025H8.2905H7.1225V21.2709V21.76H5.8425V23.04H4.5625V24.32H7.1225V25.6H9.6825V26.88H10.9625V28.16H13.5225V29.44H14.8025V30.72H16.0825V16.64H14.8025Z"
      fill="#1EA1C4"
    />
    <path
      d="M16.0818 23.04H28.8818V8.95998L16.0818 8.95998V23.04Z"
      fill="#1EA1C4"
    />
    <path
      d="M26.322 23.04V21.76H25.042V21.2709V20.48H23.874H23.762H22.482V19.2H21.202V17.92H18.642V16.64H17.362H16.082V30.72H17.362V29.44H18.642V28.16H21.202V26.88H22.482V25.6H25.042V24.32H27.602V23.04H26.322Z"
      fill="#0569A6"
    />
    <path
      d="M25.042 7.68003V6.40003H22.482V5.12003H21.202V3.84003H18.642V2.56003H17.362V1.28003H16.082V15.36H17.362H18.642V14.08H21.202V12.8H22.482V11.52H23.762H23.874H25.042V10.7292V10.24H26.322V8.96003H27.602V7.68003H25.042Z"
      fill="#5EF6D8"
    />
    <path
      d="M28.8206 7.68V6.4H26.3223V5.12H23.7623V3.84H22.4823V2.56H19.9223V1.28H18.6423V0H13.5223V1.28H12.2423V2.56H9.68229V3.84H8.4V5.12H5.84V6.4H3.34171V7.68H2V8.96V24.32H3.28V25.6H5.84V26.88H8.4V28.16H9.68V29.44H12.24V30.72H13.52V32H18.64V30.72H19.92V29.44H22.48V28.16H23.76V26.88H26.32V25.6H28.88V24.32H30.16V8.96V7.68H28.8206ZM28.8823 23.04H27.6V24.32H25.04V25.6H22.48V26.88H21.2V28.16H18.64V29.44H17.36V30.72H14.8V29.44H13.52V28.16H10.96V26.88H9.68V25.6H7.12V24.32H4.56V23.04H3.28V8.96H4.56V7.68H7.12V6.4H9.68V5.12H10.96V3.84H13.52V2.56H14.8V1.28H17.36V2.56H18.64V3.84H21.2V5.12H22.48V6.4H25.04V7.68H27.6V8.96H28.88L28.8823 23.04Z"
      fill="#2450A4"
    />
  </svg>
</svg>
`;

exports[`Avatar SVG Standard Layout - createStandardAvatarSVG() renders avatar in styled container 1`] = `
<svg
  height="100%"
  viewBox="0 0 587 718"
  width="100%"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="white"
    height="100%"
    width="100%"
  />
  <svg
    height="600"
    viewBox="0 0 380 600"
    xmlns="http://www.w3.org/2000/svg"
    y="35"
  >
    <style>
      /* accessory-a */
.accessory-a-baz{stroke:orange;}.accessory-a-boz{stroke:blue;}
/* accessory-b */
.accessory-b-foo{stroke:red;}.accessory-b-boz{stroke:blue;}
/* customisation styles */
.color-xxx{fill:red}.color-yyy{fill:#aabbcc}.color-zzz{fill:#111111}
    </style>
    <g
      id="avatar"
    >
      <g
        id="accessory-a"
      >
        <rect
          class="accessory-a-baz accessory-a-boz"
          height="16"
          width="15"
        />
        <defs />
        <g>
          <circle
            class="foo accessory-a-baz accessory-a-boz color-yyy"
            cx="15"
            cy="16"
            r="11"
          />
        </g>
        <circle
          class="accessory-a-baz"
          cx="12"
          cy="13"
          r="14"
        />
      </g>
      <g
        id="accessory-b"
      >
        <rect
          class="accessory-b-foo bar baz color-xxx"
          height="6"
          width="5"
        />
        <defs />
        <g>
          <circle
            class="bar color-yyy"
            cx="5"
            cy="6"
            r="1"
          />
        </g>
        <circle
          class="accessory-b-foo"
          cx="2"
          cy="3"
          r="4"
        />
      </g>
    </g>
  </svg>
  <svg
    id="reddit-logo"
    preserveAspectRatio="xMinYMax"
    viewBox="0 0 97 32"
    width="94.5"
    x="11.5"
    xmlns="http://www.w3.org/2000/svg"
    y="-11.5"
  >
    <g
      transform="scale(1.6)"
    >
      <circle
        cx="10"
        cy="10"
        fill="#FF4500"
        r="10"
      />
      <path
        d="M16.67,10A1.46,1.46,0,0,0,14.2,9a7.12,7.12,0,0,0-3.85-1.23L11,4.65,13.14,5.1a1,1,0,1,0,.13-0.61L10.82,4a0.31,0.31,0,0,0-.37.24L9.71,7.71a7.14,7.14,0,0,0-3.9,1.23A1.46,1.46,0,1,0,4.2,11.33a2.87,2.87,0,0,0,0,.44c0,2.24,2.61,4.06,5.83,4.06s5.83-1.82,5.83-4.06a2.87,2.87,0,0,0,0-.44A1.46,1.46,0,0,0,16.67,10Zm-10,1a1,1,0,1,1,1,1A1,1,0,0,1,6.67,11Zm5.81,2.75a3.84,3.84,0,0,1-2.47.77,3.84,3.84,0,0,1-2.47-.77,0.27,0.27,0,0,1,.38-0.38A3.27,3.27,0,0,0,10,14a3.28,3.28,0,0,0,2.09-.61A0.27,0.27,0,1,1,12.48,13.79Zm-0.18-1.71a1,1,0,1,1,1-1A1,1,0,0,1,12.29,12.08Z"
        fill="#FFF"
      />
    </g>
    <g
      fill="#1a1a1a"
      transform="translate(40,7)"
    >
      <path
        d="M54.63,16.52V7.68h1a1,1,0,0,0,1.09-1V6.65a1,1,0,0,0-.93-1.12H54.63V3.88a1.23,1.23,0,0,0-1.12-1.23,1.2,1.2,0,0,0-1.27,1.11V5.55h-1a1,1,0,0,0-1.09,1v.07a1,1,0,0,0,.93,1.12h1.13v8.81a1.19,1.19,0,0,0,1.19,1.19h0a1.19,1.19,0,0,0,1.25-1.12A.17.17,0,0,0,54.63,16.52Z"
      />
      <circle
        cx="47.26"
        cy="3.44"
        fill="#FF4500"
        r="2.12"
      />
      <path
        d="M48.44,7.81a1.19,1.19,0,1,0-2.38,0h0v8.71a1.19,1.19,0,0,0,2.38,0Z"
      />
      <path
        d="M30.84,1.19A1.19,1.19,0,0,0,29.65,0h0a1.19,1.19,0,0,0-1.19,1.19V6.51a4.11,4.11,0,0,0-3-1.21c-3.1,0-5.69,2.85-5.69,6.35S22.28,18,25.42,18a4.26,4.26,0,0,0,3.1-1.23,1.17,1.17,0,0,0,1.47.8,1.2,1.2,0,0,0,.85-1.05ZM25.41,15.64c-1.83,0-3.32-1.77-3.32-4s1.48-4,3.32-4,3.31,1.78,3.31,4-1.47,3.95-3.3,3.95Z"
      />
      <path
        d="M43.28,1.19A1.19,1.19,0,0,0,42.09,0h0a1.18,1.18,0,0,0-1.18,1.19h0V6.51a4.15,4.15,0,0,0-3-1.21c-3.1,0-5.69,2.85-5.69,6.35S34.72,18,37.86,18A4.26,4.26,0,0,0,41,16.77a1.17,1.17,0,0,0,1.47.8,1.19,1.19,0,0,0,.85-1.05ZM37.85,15.64c-1.83,0-3.31-1.77-3.31-4s1.47-4,3.31-4,3.31,1.78,3.31,4-1.47,3.95-3.3,3.95Z"
      />
      <path
        d="M17.27,12.44a1.49,1.49,0,0,0,1.59-1.38v-.15a4.81,4.81,0,0,0-.1-.85A5.83,5.83,0,0,0,13.25,5.3c-3.1,0-5.69,2.85-5.69,6.35S10.11,18,13.25,18a5.66,5.66,0,0,0,4.39-1.84,1.23,1.23,0,0,0-.08-1.74l-.11-.09a1.29,1.29,0,0,0-1.58.17,3.91,3.91,0,0,1-2.62,1.12A3.54,3.54,0,0,1,10,12.44h7.27Zm-4-4.76a3.41,3.41,0,0,1,3.09,2.64H10.14A3.41,3.41,0,0,1,13.24,7.68Z"
      />
      <path
        d="M7.68,6.53a1.19,1.19,0,0,0-1-1.18A4.56,4.56,0,0,0,2.39,6.91V6.75A1.2,1.2,0,0,0,0,6.75v9.77a1.23,1.23,0,0,0,1.12,1.24,1.19,1.19,0,0,0,1.26-1.1.66.66,0,0,0,0-.14v-5A3.62,3.62,0,0,1,5.81,7.7a4.87,4.87,0,0,1,.54,0h.24A1.18,1.18,0,0,0,7.68,6.53Z"
      />
    </g>
  </svg>
</svg>
`;

exports[`composeAvatarSVG() applies dubbl3bee recursion 1`] = `
[
  <use
    href="#avatar-lower"
    transform="translate(140 426.3) scale(0.0055)"
  />,
  <use
    href="#avatar-lower"
    transform="translate(140 426.3) scale(0.0055) translate(140 426.3) scale(0.0055)"
  />,
  <use
    href="#avatar-upper"
    transform="translate(140 426.3) scale(0.0055)"
  />,
  <use
    href="#avatar-upper"
    transform="translate(140 426.3) scale(0.0055) translate(140 426.3) scale(0.0055)"
  />,
]
`;

exports[`composeAvatarSVG() merges avatar accessories into single SVG doc 1`] = `
<svg
  viewBox="0 0 380 600"
  xmlns="http://www.w3.org/2000/svg"
>
  <style>
    /* accessory-a */
.accessory-a-baz{stroke:orange;}.accessory-a-boz{stroke:blue;}
/* accessory-b */
.accessory-b-foo{stroke:red;}.accessory-b-boz{stroke:blue;}
/* customisation styles */
.color-xxx{fill:red}.color-yyy{fill:#aabbcc}.color-zzz{fill:#111111}
  </style>
  <g
    id="avatar"
  >
    <g
      id="accessory-a"
    >
      <rect
        class="accessory-a-baz accessory-a-boz"
        height="16"
        width="15"
      />
      <defs />
      <g>
        <circle
          class="foo accessory-a-baz accessory-a-boz color-yyy"
          cx="15"
          cy="16"
          r="11"
        />
      </g>
      <circle
        class="accessory-a-baz"
        cx="12"
        cy="13"
        r="14"
      />
    </g>
    <g
      id="accessory-b"
    >
      <rect
        class="accessory-b-foo bar baz color-xxx"
        height="6"
        width="5"
      />
      <defs />
      <g>
        <circle
          class="bar color-yyy"
          cx="5"
          cy="6"
          r="1"
        />
      </g>
      <circle
        class="accessory-b-foo"
        cx="2"
        cy="3"
        r="4"
      />
    </g>
  </g>
</svg>
`;

exports[`prepareAccessorySVG() extracts and namespaces SVG elements and CSS 2`] = `
<g
  id="example"
>
  <g
    class="example-foo"
  >
    <rect
      class="example-foo example-bar example-baz color-boz"
      height="6"
      width="5"
    />
    <defs>
      <circle
        class=""
        cx="0"
        cy="0"
        r="2"
      />
      <circle
        class="color-boz"
        cx="5"
        cy="6"
        r="1"
      />
      <circle
        class="example-foo"
        cx="2"
        cy="3"
        r="4"
      />
    </defs>
  </g>
</g>
`;
